--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@
     @apply bg-blue-500 text-white;
   }
   table.basic tr td {
-    @apply border  border-blue-500 p-1;
+    @apply border  border-blue-500;
   }
   table.basic a {
     @apply bg-blue-800 text-white text-sm py-2 px-3 rounded-md inline-flex gap-1;
